[gd_scene load_steps=18 format=3 uid="uid://3yv27yusrury"]

[ext_resource type="Script" path="res://enemies/enemy_knight/enemy_knight.gd" id="1_babqs"]
[ext_resource type="Texture2D" uid="uid://caw81x3cldysj" path="res://assets/enemy_knight/wake.png" id="2_va63e"]
[ext_resource type="Texture2D" uid="uid://h3od402fy6y8" path="res://assets/enemy_knight/run.png" id="3_rieob"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v73md"]
region = Rect2(0, 0, 156, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx5vs"]
atlas = ExtResource("2_va63e")
region = Rect2(0, 0, 156, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_la48s"]
atlas = ExtResource("2_va63e")
region = Rect2(156, 0, 156, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4gq1"]
atlas = ExtResource("2_va63e")
region = Rect2(312, 0, 156, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn1up"]
atlas = ExtResource("2_va63e")
region = Rect2(468, 0, 156, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj82h"]
atlas = ExtResource("3_rieob")
region = Rect2(0, 0, 156, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8x1ci"]
atlas = ExtResource("3_rieob")
region = Rect2(156, 0, 156, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkto8"]
atlas = ExtResource("3_rieob")
region = Rect2(312, 0, 156, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip2pi"]
atlas = ExtResource("3_rieob")
region = Rect2(468, 0, 156, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw4l0"]
atlas = ExtResource("3_rieob")
region = Rect2(624, 0, 156, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bq55"]
atlas = ExtResource("3_rieob")
region = Rect2(780, 0, 156, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_736vv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v73md")
}],
"loop": true,
"name": &"sleep",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx5vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la48s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4gq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn1up")
}],
"loop": true,
"name": &"wakeup",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj82h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x1ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkto8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip2pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw4l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bq55")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_66so5"]
radius = 6.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ea12t"]
radius = 6.0
height = 24.0

[node name="enemy_knight" type="CharacterBody2D"]
script = ExtResource("1_babqs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -16)
sprite_frames = SubResource("SpriteFrames_736vv")
animation = &"wakeup"
frame_progress = 0.250378

[node name="SleepCollision" type="CollisionShape2D" parent="."]
position = Vector2(-29, -8)
shape = SubResource("CapsuleShape2D_66so5")

[node name="AwakeCollision" type="CollisionShape2D" parent="."]
position = Vector2(-29, -11)
shape = SubResource("CapsuleShape2D_ea12t")

[node name="DetectionArea" type="Area2D" parent="."]
